Working through visibility issues

--- a/src/styles/bonuspage.css
+++ b/src/styles/bonuspage.css
@@ -2,12 +2,13 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-items: center;
 }
 
 .bonusContent {
   border: 4px solid #3f9cd6;
   color: white;
-  padding: 8px;
+  width: 70vw;
+  text-align: center;
 }
